force-app/main/default/objects/PseudoAccount__c/PseudoAccount__c.object-meta.xml
<CustomObject>
    <description>Object will hold data from Pseudonimised accounts.</description>
    <label>Pseudo Account</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Pseudo Account Name</label>
        <type>AutoNumber</type>       
    </nameField>
    <pluralLabel>Pseudo Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>