force-app/main/default/objects/PseudoAccount__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of the related Account.</description>
    <label>Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>