force-app/main/default/objects/PseudoAccount__c/fields/InvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmail__c</fullName>
    <description>Invoice Email related to Account.</description>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>