force-app/main/default/objects/PseudoAccount__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>It stores the Last name of related Account.</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>