force-app/main/default/objects/PseudoAccount__c/fields/PersonHomePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonHomePhone__c</fullName>
    <description>Home Phone related to Account</description>
    <label>Person Home Phone</label>
    <type>Phone</type>
</CustomField>