force-app/main/default/objects/PseudoAccount__c/fields/PersonMailingCity__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCity__c</fullName>
    <description>Mailing City of related Account.</description>
    <label>Person Mailing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>