force-app/main/default/objects/PseudoAccount__c/fields/PersonMailingCountry__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCountry__c</fullName>
    <description>Mailing Country of related Account</description>
    <label>Person Mailing Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>