force-app/main/default/objects/PseudoAccount__c/fields/PersonMailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCountryCode__c</fullName>
    <description>It stores the country code of related account.</description>
    <label>Person Mailing Country Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>