force-app/main/default/objects/PseudoAccount__c/fields/PersonMailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingPostalCode__c</fullName>
    <description>Mailing Zip/Postal Code of related Account.</description>
    <label>Person Mailing Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>