force-app/main/default/objects/PseudoAccount__c/fields/PersonMailingState__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingState__c</fullName>
    <description>Mailing State/Province related to Account.</description>
    <label>Person Mailing State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>