force-app/main/default/objects/PseudoAccount__c/fields/PersonMailingStateCode__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingStateCode__c</fullName>
    <description>It is used to store of state code of related Account.</description>
    <label>Person Mailing State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>