force-app/main/default/objects/PseudoAccount__c/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <description>Mobile related to Account.</description>
    <label>Person Mobile Phone</label>
    <type>Phone</type>
</CustomField>