force-app/main/default/objects/PseudoAccount__c/fields/PersonOtherPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherPhone__c</fullName>
    <description>Other Phone related to Account</description>
    <label>Person Other Phone</label>
    <type>Phone</type>
</CustomField>